samples/pass/global_scalar.c
int g = 10;

int add(int x) {
    return x + g;
}

int main() {
    print_int(add(5));
    print_newline();
    return 0;
}
