samples/fail/float_to_int.c
int main() {
    int x = 2.5;
    return x;
}
